Meta_Argument/depends_on/vpc.tf
resource "aws_vpc" "DEV-VPC" {
    cidr_block = "10.0.0.0/16"
    tags = {
        "name" = "MY-VPC"
    }
}
